# advent

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix  setup
.github/workflows/: rust.yml
2015/day01/: Cargo.toml
2015/day02/: Cargo.toml
2015/day03/: Cargo.toml
2015/day04/: Cargo.toml
2015/day05/: Cargo.toml
2015/day06/: Cargo.toml
2015/day07/: Cargo.toml
2015/day08/: Cargo.toml
2015/day09/: Cargo.toml
2015/day10/: Cargo.toml
2015/day11/: Cargo.toml
2015/day12/: Cargo.toml
2015/day13/: Cargo.toml
2015/day14/: Cargo.toml
2015/day15/: Cargo.toml
2015/day16/: Cargo.toml
2015/day17/: Cargo.toml
2015/day18/: Cargo.toml
2015/day19/: Cargo.toml
2015/day20/: Cargo.toml
2015/day21/: Cargo.toml
2015/day22/: Cargo.toml
2015/day23/: Cargo.toml
2015/day24/: Cargo.toml
2015/day25/: Cargo.toml
2016/day01/: Cargo.toml
2016/day02/: Cargo.toml
2016/day03/: Cargo.toml
2016/day04/: Cargo.toml
2016/day05/: Cargo.toml
2016/day06/: Cargo.toml
2016/day07/: Cargo.toml
2016/day08/: Cargo.toml
2016/day09/: Cargo.toml
2016/day10/: Cargo.toml
2016/day11/: Cargo.toml
2016/day12/: Cargo.toml
2016/day13/: Cargo.toml
2016/day14/: Cargo.toml
2016/day14/src/: main.rs
2016/day15/: Cargo.toml
2016/day16/: Cargo.toml
2016/day17/: Cargo.toml
2016/day18/: Cargo.toml
2016/day19/: Cargo.toml
2016/day20/: Cargo.toml
2016/day21/: Cargo.toml
2016/day22/: Cargo.toml
2016/day23/: Cargo.toml
2016/day24/: Cargo.toml
2016/day25/: Cargo.toml
2017/day01/: Cargo.toml
2017/day02/: Cargo.toml
2017/day03/: Cargo.toml
2017/day04/: Cargo.toml
2017/day05/: Cargo.toml
2017/day06/: Cargo.toml
2017/day07/: Cargo.toml
2017/day08/: Cargo.toml
2017/day09/: Cargo.toml
2017/day10/: Cargo.toml
2017/day11/: Cargo.toml
2017/day12/: Cargo.toml
2017/day13/: Cargo.toml
2017/day14/: Cargo.toml
2017/day15/: Cargo.toml
2017/day16/: Cargo.toml
2017/day17/: Cargo.toml
2017/day18/: Cargo.toml
2017/day19/: Cargo.toml
2017/day20/: Cargo.toml
2017/day21/: Cargo.toml
2017/day22/: Cargo.toml
2017/day23/: Cargo.toml
2017/day24/: Cargo.toml
2017/day25/: Cargo.toml
2018/: Cargo.toml
2018/day01/: Cargo.toml
2018/day02/: Cargo.toml
2018/day03/: Cargo.toml
2018/day04/: Cargo.toml
2018/day05/: Cargo.toml
2018/day06/: Cargo.toml
2018/day07/: Cargo.toml
2018/day08/: Cargo.toml
2018/day09/: Cargo.toml
2018/day10/: Cargo.toml
2018/day11/: Cargo.toml
2018/day12/: Cargo.toml
2018/day13/: Cargo.toml
2018/day14/: Cargo.toml
2019/: Cargo.toml
2019/day15/: Cargo.toml
2019/day15/src/: main.rs
2021/: Cargo.toml
2021/day19/: Cargo.toml
2021/day19/src/: kabsch.rs  main.rs
2023/: README.md
2023/day24/: Cargo.toml  test.ipynb
2023/day24/src/: main.rs
common/: Cargo.toml
common_derive/: Cargo.toml
day01/: Cargo.toml
day03/: Cargo.toml
day04/: Cargo.toml
day05/: Cargo.toml
day06/: Cargo.toml
day07/: Cargo.toml
day08/: Cargo.toml
day09/: Cargo.toml
day11/: Cargo.toml
day14/: Cargo.toml
day16/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day19/: Cargo.toml
day22/: Cargo.toml  test.txt
day23/: Cargo.toml  input.txt
day24/: Cargo.toml
scripts/: setup  symlink-inputs.sh
template/: Cargo.toml  input.txt
(+511 files in other folders)
