[workspace]
resolver = "2"
members = [
  "common",
  "2015/day*",
  "2016/day*",
  "2017/day*",
  "2018/day*",
  "2019/day*",
  "2020/day*",
  "2021/day*",
  "2022/day*",
  "2023/day*",
  "2024/day*",
  "2025/day*",
]

[workspace.dependencies]
itertools = "0.14"
petgraph = "0.8.3"
nom = "8.0.0"
rayon = "1.10.0"
ndarray = "0.17.1"
