[package]
name = "advent_2016_14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
nom = { workspace = true }
md-5 = "0.10.6"
base64ct = { version = "1.8.0", features = ["alloc"] }
