[package]
name = "advent_2019_15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
intcode = { path = "../intcode" }
itertools = { workspace = true }
nom = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.15"
