[package]
name = "advent_2021_19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
itertools = { workspace = true }
nalgebra = "0.32.3"
ndarray = "0.17.0"
nom = { workspace = true }
