[package]
name = "advent_2023_24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
nom = { workspace = true }
z3 = { version = "0.12.1", features = ["static-link-z3"], optional = true }

[features]
z3 = ["dep:z3"]
